--- a/Treellenge/src/app/sign-up/sign-up.page.html
+++ b/Treellenge/src/app/sign-up/sign-up.page.html
@@ -1,20 +1,18 @@
-<ion-content color="primary">
+<ion-content>
   <ion-row>
     <ion-col>
-      <ion-img src="../../assets/img/logo_1.png"></ion-img>
+      <ion-img src="../../assets/img/logosvg.svg" class="ion-margin"></ion-img>
     </ion-col>
   </ion-row>
   <ion-footer class="ion-no-border">
     <ion-row>
       <ion-col>
-        <ion-button expand="block">Loging</ion-button>
+        <ion-button expand="block" size="large" shape="round" class="ion-margin-top">Loging</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-text class="ion-text-center">
-          <p><a>Register</a></p>
-        </ion-text>
+        <ion-button expand="block" size="large" shape="round" class="ion-margin-top">Register</ion-button>
       </ion-col>
     </ion-row>
   </ion-footer>
