[front] sign up page

--- a/Treellenge/src/app/sign-up/sign-up.page.html
+++ b/Treellenge/src/app/sign-up/sign-up.page.html
@@ -1,18 +1,18 @@
 <ion-content>
-  <ion-row>
+  <ion-row style="margin-top: 30vh;">
     <ion-col>
-      <ion-img src="../../assets/img/logosvg.svg" class="ion-margin"></ion-img>
+      <img src="../../assets/img/logosvg.svg" height="300px" class="treellenge-icon">
     </ion-col>
   </ion-row>
   <ion-footer class="ion-no-border">
     <ion-row>
       <ion-col>
-        <ion-button expand="block" size="large" shape="round" class="ion-margin-top">Loging</ion-button>
+        <ion-button style="margin-left: 32px; margin-right: 32px;" expand="block" size="large" class="ion-margin-top">Loging</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" size="large" shape="round" class="ion-margin-top">Register</ion-button>
+        <ion-button style="margin-left: 32px; margin-right: 32px; color: white !important;" expand="block" size="large" class="ion-margin-top" fill="outline">Register</ion-button>
       </ion-col>
     </ion-row>
   </ion-footer>
