--- a/Treellenge/src/app/sign-up/sign-up.page.scss
+++ b/Treellenge/src/app/sign-up/sign-up.page.scss
@@ -1,3 +1,10 @@
 ion-content{
     --ion-background-color:#00b75f;
 }
+
+.treellenge-icon{
+  height: 35vh;
+  width: auto;
+  margin: auto;
+  display: block;
+}
