[front]Footer component

--- a/Treellenge/src/app/challenges/challenges.page.html
+++ b/Treellenge/src/app/challenges/challenges.page.html
@@ -7,3 +7,4 @@
 <ion-content>
     <img src="https://www.turismonuevayork.com/wp-content/uploads/2014/09/La-Estatua-de-la-Libertad-en-Nueva-York-760x500.jpg" alt="">
 </ion-content>
+<app-footer></app-footer>
