<front> add style = overflow: scroll

--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -1,10 +1,12 @@
 <ion-header>
-  <ion-avatar>
-    <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-  </ion-avatar>
+  <ion-toolbar>
+    <ion-avatar>
+      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+    </ion-avatar>
+  </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" style="overflow: scroll;">
   <div id="Challenges">
     <BR>
     <ion-toolbar>
