[Front] footer component

--- a/Treellenge/src/app/challenges/challenges.page.html
+++ b/Treellenge/src/app/challenges/challenges.page.html
@@ -6,5 +6,5 @@
  
 <ion-content>
     <img src="https://www.turismonuevayork.com/wp-content/uploads/2014/09/La-Estatua-de-la-Libertad-en-Nueva-York-760x500.jpg" alt="">
-</ion-content>
-<app-footer></app-footer>
+    <app-footer class="fixed-bottom"></app-footer>
+  </ion-content>
