--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -44,7 +44,8 @@
       </ion-slide>
     </ion-slides>
   </div>
+  <app-footer class="fixed-bottom"></app-footer>
 </ion-content>
 
-<app-footer> </app-footer>
+
 
