--- a/Treellenge/src/app/component/footer/footer.component.html
+++ b/Treellenge/src/app/component/footer/footer.component.html
@@ -1,26 +1,13 @@
-<ion-footer translucent="true" class="icon-footer">
-  <ion-grid>
-    <ion-row justify-content-around>
-      <ion-col>
-        <ion-button color="success - shade" expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/home.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="success - shade" expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/perfil.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="success - shade"expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/challenge.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="success - shade" expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/donation.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-footer>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button routerLinkActive="tab-selected" routerLink="/home" class="ios" tab="home">
+      <ion-icon name="list-box"></ion-icon>
+      <ion-label>Appointments</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button routerLinkActive="tab-selected" routerLink="/make-appointment" class="ios" tab="make-appointment">
+      <ion-icon name="add-circle"></ion-icon>
+      <ion-label>Book Appointment</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
