--- a/Treellenge/src/app/donations/donations.page.html
+++ b/Treellenge/src/app/donations/donations.page.html
@@ -35,5 +35,5 @@
       </ion-slides>
     </ion-row>
   </ion-grid>
-  <app-footer class="fixed-bottom"></app-footer>
+  <app-footer></app-footer>
 </ion-content>
