--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -44,7 +44,7 @@
       </ion-slide>
     </ion-slides>
   </div>
-  <app-footer class="fixed-bottom"></app-footer>
+  <app-footer></app-footer>
 </ion-content>
 
 
