--- a/Treellenge/src/app/component/footer/footer.component.html
+++ b/Treellenge/src/app/component/footer/footer.component.html
@@ -1,26 +1,24 @@
-<ion-footer translucent="true" class="icon-footer">
-  <ion-grid>
-    <ion-row justify-content-around>
-      <ion-col>
-        <ion-button color="success - shade" expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/home.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="success - shade" expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/perfil.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="success - shade"expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/challenge.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button color="success - shade" expand="block" fill="solid" [disabled]="internetDisable">
-          <img src="../../assets/img/donation.png" style="width : 80% ; height : 80%">
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-footer>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="schedule">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Schedule</ion-label>
+      <ion-badge>6</ion-badge>
+    </ion-tab-button>
+
+    <ion-tab-button tab="speakers">
+      <ion-icon name="person-circle"></ion-icon>
+      <ion-label>Speakers</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="map">
+      <ion-icon name="map"></ion-icon>
+      <ion-label>Map</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="about">
+      <ion-icon name="information-circle"></ion-icon>
+      <ion-label>About</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
