--- a/Treellenge/src/app/challenges/challenges.page.html
+++ b/Treellenge/src/app/challenges/challenges.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>challenges</ion-title>
+  <ion-toolbar color="success - shade">
+    <ion-title class="ion-text-center" size="large">challenges</ion-title>
   </ion-toolbar>
 </ion-header>
  
