--- a/Treellenge/src/app/component/footer/footer.component.html
+++ b/Treellenge/src/app/component/footer/footer.component.html
@@ -1,13 +1,16 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button routerLinkActive="tab-selected" routerLink="/home" class="ios" tab="home">
-      <ion-icon name="list-box"></ion-icon>
-      <ion-label>Appointments</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button routerLinkActive="tab-selected" routerLink="/make-appointment" class="ios" tab="make-appointment">
-      <ion-icon name="add-circle"></ion-icon>
-      <ion-label>Book Appointment</ion-label>
-    </ion-tab-button>
+  <ion-tab-bar slot="bottom" color="success - shade">
+    <ion-button class="ion-margin-horizontal" color="transparent" [routerLink]="['/home']">
+      <ion-icon src="../assets/img/home.svg"></ion-icon>
+    </ion-button> 
+    <ion-button class="ion-margin-horizontal" color="transparent" [routerLink]="['/profile']">
+      <ion-icon src="../assets/img/perfil.svg"></ion-icon>
+    </ion-button> 
+    <ion-button class="ion-margin-horizontal" color="transparent" [routerLink]="['/challenges']">
+      <ion-icon src="../assets/img/challenge.svg"></ion-icon>
+    </ion-button>
+    <ion-button class="ion-margin-horizontal" color="transparent" [routerLink]="['/donations']">
+      <ion-icon src="../assets/img/donate.svg"></ion-icon>
+    </ion-button>  
   </ion-tab-bar>
 </ion-tabs>
