--- a/Treellenge/src/app/donations/donations.page.html
+++ b/Treellenge/src/app/donations/donations.page.html
@@ -7,7 +7,7 @@
             <ion-img src="https://content.api.news/v3/images/bin/a6923adbc7bece73803221613f410782"></ion-img>
           </ion-avatar>
           <ion-label>
-            <ion-button expand="block" shape="round" style="margin-left: 32px; margin-right: 32px;">DONATE</ion-button>
+            <ion-button expand="block" shape="round" style="margin-left: 32px; margin-right: 32px;" color="success - shade">DONATE</ion-button>
           </ion-label>
         </ion-item>
       </ion-col>
@@ -27,7 +27,7 @@
                     {{val.description}}
                   </p>
                 </ion-text>
-                <ion-button expand="full">Accept donation</ion-button>
+                <ion-button expand="full" color="success - shade">Accept donation</ion-button>
               </ion-card-content>
             </ion-card-header>
           </ion-card>
