--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -1,8 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-avatar>
+  <ion-toolbar color="success - shade">
+    <ion-avatar slot="start">
       <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
     </ion-avatar>
+    
   </ion-toolbar>
 </ion-header>
 
