<front> Implement ion-grid

--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -1,51 +1,63 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-avatar>
-      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-    </ion-avatar>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true" style="overflow: scroll;">
-  <div id="Challenges">
-    <BR>
-    <ion-toolbar>
-      <ion-title size="large" style="text-align: left;">Treellenges</ion-title>
-    </ion-toolbar>
-    <ion-slides pager="true">
-      <ion-slide>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPlxVLj4lfinmQqoWJORD4wS2oNlm-T2kwerGAjd-21E43HhG&usqp=CAU">
-      </ion-slide>
-      <ion-slide>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPlxVLj4lfinmQqoWJORD4wS2oNlm-T2kwerGAjd-21E43HhG&usqp=CAU">
-      </ion-slide>
-      <ion-slide>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPlxVLj4lfinmQqoWJORD4wS2oNlm-T2kwerGAjd-21E43HhG&usqp=CAU">
-      </ion-slide>
-      <ion-slide>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPlxVLj4lfinmQqoWJORD4wS2oNlm-T2kwerGAjd-21E43HhG&usqp=CAU">
-      </ion-slide>
-    </ion-slides>
-    <BR>
-  </div>
-  <div id="Treetips">
-    <ion-toolbar>
-      <ion-title size="large" style="text-align: left;">Treetips</ion-title>
-    </ion-toolbar>
-    <ion-slides pager="true">
-      <ion-slide>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPlxVLj4lfinmQqoWJORD4wS2oNlm-T2kwerGAjd-21E43HhG&usqp=CAU">
-      </ion-slide>
-      <ion-slide>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPlxVLj4lfinmQqoWJORD4wS2oNlm-T2kwerGAjd-21E43HhG&usqp=CAU">
-      </ion-slide>
-      <ion-slide>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPlxVLj4lfinmQqoWJORD4wS2oNlm-T2kwerGAjd-21E43HhG&usqp=CAU">
-      </ion-slide>
-    </ion-slides>
-  </div>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-avatar>
+            <ion-img src="https://content.api.news/v3/images/bin/a6923adbc7bece73803221613f410782"></ion-img>
+          </ion-avatar>
+          <ion-label>
+            <ion-label>
+              <ion-title style="text-align: center;">Score</ion-title>
+            </ion-label>
+            <ion-progress-bar value="0.5" color="secondary"></ion-progress-bar>
+          </ion-label>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-toolbar>
+        <ion-title size="large" style="text-align: left;">Treellenges</ion-title>
+      </ion-toolbar>
+      <ion-slides>
+        <ion-slide *ngFor="let val of data">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>
+                {{val.titulo}}
+              </ion-card-title>
+              <ion-card-content>
+                <ion-img [src]="val.imgURL"></ion-img>
+                <ion-text>
+                  <p>
+                    {{val.description}}
+                  </p>
+                </ion-text>
+              </ion-card-content>
+            </ion-card-header>
+          </ion-card>
+        </ion-slide>
+      </ion-slides>
+    </ion-row>
+    <ion-row>
+      <ion-toolbar>
+        <ion-title size="large" style="text-align: left;">Treetips</ion-title>
+      </ion-toolbar>
+      <ion-slides>
+        <ion-slide *ngFor="let val of data1">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>
+                {{val.titulo}}
+              </ion-card-title>
+              <ion-card-content>
+                <ion-img [src]="val.imgURL" style="width: 150px;"></ion-img>
+              </ion-card-content>
+            </ion-card-header>
+          </ion-card>
+        </ion-slide>
+      </ion-slides>
+    </ion-row>
+  </ion-grid>
   <app-footer></app-footer>
 </ion-content>
-
-
-
