[front] Fixed footer

--- a/Treellenge/src/app/component/footer/footer.component.html
+++ b/Treellenge/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs style="z-index:3;" class = "foot">
   <ion-tab-bar slot="bottom" color="success - shade">
     <ion-button class="ion-margin-horizontal" color="transparent" [routerLink]="['/home']">
       <ion-icon src="../assets/img/home.svg"></ion-icon>
