[front] fixed footer

--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -59,5 +59,9 @@
       </ion-slides>
     </ion-row>
   </ion-grid>
-  <app-footer></app-footer>
 </ion-content>
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <app-footer></app-footer>
+  </ion-toolbar>
+</ion-footer>
