[Fix] - fix in sing-up

--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -5,8 +5,9 @@
         <ion-item color="success - shade">
           <div *ngIf="validation">
             <ion-avatar slot="start">
-              <ion-img [src]="userData[0].photoUrl"></ion-img>
-              <ion-text>{{userData}}</ion-text>
+              
+              <!-- <ion-img [src]="userData[0].photoUrl"></ion-img> -->
+              <!-- <ion-text>{{userData}}</ion-text> -->
             </ion-avatar>
           </div>
           <div *ngIf="!validation">
