--- a/Treellenge/src/app/sign-up/sign-up.page.html
+++ b/Treellenge/src/app/sign-up/sign-up.page.html
@@ -24,7 +24,7 @@
         <ion-grid fixed>
           <form>
             <ion-row>
-              <ion-col size="10">
+              <ion-col>
                 <ion-button type="submit" (click)="authService.GoogleAuth()" style="margin-left: 32px; margin-right: 32px;"
                   expand="block" size="large" class="ion-margin-top icon-left logo-google">
                   Sign In with Google
@@ -44,4 +44,5 @@
       
     </ion-slide>
   </ion-slides>
+  
 </ion-content>
