--- a/Treellenge/src/app/sign-up/sign-up.page.html
+++ b/Treellenge/src/app/sign-up/sign-up.page.html
@@ -2,47 +2,45 @@
 
 
   <ion-slides pager="true">
-    
+
     <ion-slide *ngFor="let slide of slides">
 
       <div class="slide-img-padding">
         <img [src]="slide.img">
       </div>
       <div>
-        <h3>{{ slide.title }}</h3>  
+        <h3>{{ slide.title }}</h3>
       </div>
 
     </ion-slide>
 
     <ion-slide>
-      <ion-row style="margin-top: 30vh;">
+      <ion-row style="margin-top: 30%;">
         <ion-col>
           <img src="../../assets/img/logosvg.svg" height="300px" class="treellenge-icon">
         </ion-col>
       </ion-row>
-      <ion-footer class="ion-no-border">
-        <ion-grid fixed>
-          <form>
-            <ion-row>
-              <ion-col>
-                <ion-button type="submit" (click)="authService.GoogleAuth()" style="margin-left: 32px; margin-right: 32px;"
-                  expand="block" size="large" class="ion-margin-top icon-left logo-google">
-                  Sign In with Google
-                </ion-button>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="ion-text-center">
-                <ion-router-link color="white" [routerLink]="['/home']">Continue without login</ion-router-link>
-              </ion-col>
-            </ion-row>
-          </form>
-
-        </ion-grid>
-
-      </ion-footer>
-      
     </ion-slide>
+
   </ion-slides>
-  
 </ion-content>
+<ion-footer class="ion-no-border">
+  <ion-grid fixed>
+    <form>
+      <ion-row>
+        <ion-col class="centrado">
+          <ion-button type="submit" shape="round" (click)="authService.GoogleAuth()" class="ion-margin-top">
+            Sign In with Google
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center">
+          <ion-router-link color="white" [routerLink]="['/home']">Continue without login</ion-router-link>
+        </ion-col>
+      </ion-row>
+    </form>
+
+  </ion-grid>
+
+</ion-footer>
