--- a/Treellenge/src/app/sign-up/sign-up.page.scss
+++ b/Treellenge/src/app/sign-up/sign-up.page.scss
@@ -1,10 +1,11 @@
 ion-content{
   --ion-background-color:#f8fcfb!important;
+  color: black;
 }
 
 ion-footer{
-  --ion-background-color:#f8fcfb!important;
   background-color: #f8fcfb!important;
+  color: black;
 }
 
 .treellenge-icon{
@@ -25,9 +26,11 @@ padding: 35px;
 }
 
 h3 {
-font-size: 30px;
+font-size: 20px;
 font-weight: lighter;
-margin-bottom: 40px;
+margin-bottom: 10%;
+margin-bottom: 100px;
+color: black;
 }
 
 .centrado{
