--- a/Treellenge/src/app/component/footer/footer.component.html
+++ b/Treellenge/src/app/component/footer/footer.component.html
@@ -9,7 +9,7 @@
     <ion-button class="ion-margin-horizontal" color="transparent" [routerLink]="['/donations']">
       <ion-icon src="../assets/img/donate.svg"></ion-icon>
     </ion-button>
-    <ion-button class="ion-margin-horizontal" color="transparent" [routerLink]="['/profile']">
+    <ion-button class="ion-margin-horizontal" color="transparent" (click)="authService.SignOut()">
       <ion-icon src="../assets/img/perfil.svg"></ion-icon>
     </ion-button>  
   </ion-tab-bar>
