added back option when clicking challenge titles

--- a/Treellenge/src/app/check-my-tree/check-my-tree.page.html
+++ b/Treellenge/src/app/check-my-tree/check-my-tree.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Never let your tree stop growing</ion-title>
+    <ion-title [routerLink]="['/home']">Never stop growing</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="close()"><ion-icon name="close" slot="icon-only"></ion-icon></ion-button>
     </ion-buttons>
