--- a/Treellenge/src/app/daily-challenge/daily-challenge.page.html
+++ b/Treellenge/src/app/daily-challenge/daily-challenge.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Make a plant famous</ion-title>
+    <ion-title [routerLink]="['/home']">Plantfie</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="reload()"><ion-icon name="reload" slot="icon-only"></ion-icon></ion-button>
     </ion-buttons>
