[UPLOAD] - final push

--- a/Treellenge/src/app/home/home.page.html
+++ b/Treellenge/src/app/home/home.page.html
@@ -1,16 +1,15 @@
-<ion-content>
+<ion-content class="pad">
   <ion-grid>
     <ion-row>
       <ion-col>
         <ion-item color="success - shade">
           <div *ngIf="validation">
-            <ion-avatar slot="start">
-              <!-- <ion-img [src]="userData[0].photoUrl"></ion-img> -->
-              <!-- <ion-text>{{userData}}</ion-text> -->
+            <ion-avatar slot="start" [routerLink]="['/user']">
+              <ion-img [src]="userData.photoURL" width="50px"></ion-img>
             </ion-avatar>
           </div>
           <div *ngIf="!validation">
-            <ion-avatar slot="start">
+            <ion-avatar slot="start" width="30px">
               <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
             </ion-avatar>
           </div> 
